# tensornets

./: pyproject.toml  setup.py
